# grp-mcp

./: .env.example  .gitignore  Edit-Connections.bat  How-to-start-webapp-change-instance.txt  Installation-and-Setup-Guide.md  KNOWLEDGE.md  NEW_MACHINE_SETUP.docx  NEW_MACHINE_SETUP.md  README.md  connections.example.json  grp-mcp-Installation-and-Setup-Guide.docx  kb_server.example.json  pyproject.toml
playwright/: EXTENDING_ENDPOINTS.md  access_rights_modern.js  add_endpoint_action.js  add_endpoint_action_modern.js  add_endpoint_entity.js  add_endpoint_entity_modern.js  add_endpoint_masterdetail_modern.js  change_company_type_modern.js  delete_endpoint_entity_modern.js  delete_finyear.js  dump_full_schema.py  inspect_company_fields.js  inspect_grid_fields.js  inspect_screen_fields.js  inspect_segkey.js  inspect_sm207060.js  inspect_tabs_cs101500.js  populate_all_views.js  set_features_modern.js  setup_finyear.js
src/grp_mcp/: __init__.py  acumatica.py  aspx.py  config.py  customization.py  enforcement.py  guide_nudge.py  kb.py  kb_client.py  loaders.py  preflight.py  report_params.py  screen.py  server.py  setup_map.json  ui.py
tests/: test_aspx.py  test_defect_register.py  test_smoke.py
