[project]
name = "grp-mcp"
version = "0.14.0"
description = "MCP server exposing Acumatica ERP (contract-based REST API) as tools for AI agents. Multi-instance, OAuth2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arvindh" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.scripts]
grp-mcp = "grp_mcp.server:main"
grp-mcp-ui = "grp_mcp.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grp_mcp"]
