[project]
name = "grp-mcp"
version = "0.72.0"
description = "MCP server exposing Acumatica ERP (contract-based REST API) as tools for AI agents. Multi-instance, OAuth2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arvindh" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
grp-mcp = "grp_mcp.server:main"
grp-mcp-ui = "grp_mcp.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The sdist is PUBLIC. By default hatchling ships the whole working tree, which swept in
# a stale .claude/worktrees/ copy of the entire source (a second, divergent grp_mcp that
# is not what anyone installs) plus local agent scratch. Ship the code, tests and docs —
# nothing else.
[tool.hatch.build.targets.sdist]
exclude = [
  ".claude",
  ".venv",
  "connections.json",   # local ERP credentials — also gitignored; never package it
  "kb_server.json",     # local kb-mcp-dual launch paths — gitignored; never package it
  "*.docx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grp_mcp"]

# Ship the operational knowledge base inside the package so the `knowledge` tool can
# serve it from an installed wheel (repo-root KNOWLEDGE.md -> grp_mcp/KNOWLEDGE.md).
[tool.hatch.build.targets.wheel.force-include]
"KNOWLEDGE.md" = "grp_mcp/KNOWLEDGE.md"
